--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
+
+spring.servlet.multipart.max-file-size=50MB
