--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,4 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
 
-spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size = -1
+spring.servlet.multipart.max-request-size=-1
