--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -15,8 +15,8 @@ primary_region = 'arn'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
+  auto_stop_machines = false
+  auto_start_machines = false
   min_machines_running = 0
   processes = ['app']
 
